# simple-messenger

./: .gitignore  Cargo.toml  README.md  todo
migrations/: 20220303134707_build.sql
sm-frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
sm-frontend/src/: App.vue  main.ts  tsconfig.json
sm-frontend/src/api/: relationships.ts  user.ts
sm-frontend/src/assets/: main.css
sm-frontend/src/components/: ChatArea.vue  Message.vue
sm-frontend/src/stores/: errorToast.ts  message.ts  user.ts
sm-frontend/src/views/: HomeView.vue  LoginView.vue  SettingsView.vue
sm_backend/: .gitignore  Cargo.toml
sm_backend/migrations/: 20220303134707_build.sql  20230613220145_add_message.sql
sm_backend/src/: auth.rs  endpoints.rs  main.rs  models.rs
sm_backend/src/endpoints/: relationships.rs  users.rs
sm_backend/src/models/: user.rs  user_relationship.rs
sm_derive/: Cargo.toml
sm_derive/src/: lib.rs
src/: auth.rs  errors.rs  main.rs  util.rs
src/endpoints/: relationships.rs  users.rs
