[package]
name = "simple-messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4"
async-std = { version = "1.10", features = [ "attributes" ] }
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "sqlite", "chrono" ] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = "0.4.19"
bcrypt = "0.12.0"
rand = "0.8.5"
actix-cors = "0.6.1"